<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_round">

    <ImageView
        android:id="@+id/ivPictureOffer"
        android:layout_width="430dp"
        android:layout_height="120dp"
        android:src="@drawable/mouse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPriceOffer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        tools:text="@string/textView_price"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPictureOffer" />

    <TextView
        android:id="@+id/tvDiscountOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        tools:text="@string/textView_discount"
        android:textColor="@color/text_discount"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceOffer"
        app:layout_constraintStart_toEndOf="@+id/tvPriceOffer"
        app:layout_constraintTop_toTopOf="@+id/tvPriceOffer" />

    <TextView
        android:id="@+id/tvTitleProductOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="@string/textView_product_name"
        android:textSize="6pt"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="@+id/tvPriceOffer"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceOffer" />


</androidx.constraintlayout.widget.ConstraintLayout>