<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".mvvmmecadolibre.view.activitys.ProductDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/tvTitleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/textView_menu_product"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/imageMenu"
            app:layout_constraintStart_toEndOf="@+id/imageMenu"
            app:layout_constraintTop_toTopOf="@+id/imageMenu" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageMenu"
            app:layout_constraintEnd_toStartOf="@+id/ivSearch"
            app:layout_constraintTop_toTopOf="@+id/imageMenu"
            app:srcCompat="@drawable/ic_baseline_favorite_menu_24" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivFavorite"
            app:layout_constraintEnd_toStartOf="@+id/imageShoppingCart"
            app:layout_constraintTop_toTopOf="@+id/ivFavorite"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <ImageView
            android:id="@+id/imageShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivSearch"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="@+id/imageMenu"
            app:layout_constraintStart_toStartOf="@+id/imageMenu"
            app:layout_constraintTop_toBottomOf="@+id/imageMenu"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/textUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_info"
            app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
            app:layout_constraintStart_toEndOf="@+id/imageLocation"
            app:layout_constraintTop_toTopOf="@+id/imageLocation" />

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textUserInfo"
            app:layout_constraintStart_toEndOf="@+id/textUserInfo"
            app:layout_constraintTop_toTopOf="@+id/textUserInfo"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/ivSearchOff"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_search_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvTitleProductOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/not_found_title"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSearchOff" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvBodyProductOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/not_found_body"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleProductOff" />

    <TextView
        android:id="@+id/tvProductStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_state_product"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:id="@+id/tvDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_divider"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductStatus"
        app:layout_constraintStart_toEndOf="@+id/tvProductStatus"
        app:layout_constraintTop_toTopOf="@+id/tvProductStatus" />

    <TextView
        android:id="@+id/tvSalesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_sales_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductStatus"
        app:layout_constraintStart_toEndOf="@+id/tvDivider"
        app:layout_constraintTop_toTopOf="@+id/tvProductStatus" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="3"
        android:text="@string/textView_product_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvProductStatus"
        app:layout_constraintTop_toBottomOf="@+id/tvProductStatus" />

    <ImageView
        android:id="@+id/ivStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvProductName"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart1"
        app:layout_constraintStart_toEndOf="@+id/ivStart1"
        app:layout_constraintTop_toTopOf="@+id/ivStart1"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart2"
        app:layout_constraintStart_toEndOf="@+id/ivStart2"
        app:layout_constraintTop_toTopOf="@+id/ivStart2"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart3"
        app:layout_constraintStart_toEndOf="@+id/ivStart3"
        app:layout_constraintTop_toTopOf="@+id/ivStart3"
        app:srcCompat="@drawable/ic_baseline_star_half_24" />

    <ImageView
        android:id="@+id/ivStart5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart4"
        app:layout_constraintStart_toEndOf="@+id/ivStart4"
        app:layout_constraintTop_toTopOf="@+id/ivStart4"
        app:srcCompat="@drawable/ic_baseline_star_gray_24" />

    <TextView
        android:id="@+id/tvCounterRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_counter_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart5"
        app:layout_constraintStart_toEndOf="@+id/ivStart5"
        app:layout_constraintTop_toTopOf="@+id/ivStart5" />

    <TextView
        android:id="@+id/tvCountProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/count"
        android:elevation="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvPictures"
        tools:text="1/1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPictures"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterRating" />


    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/textView_price"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPictures" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/textView_discount"
        android:textColor="@color/text_discount"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@+id/tvPrice" />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPictures"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/tvShipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_used_state"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp"
        android:textColor="@color/text_discount"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvFees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_fees"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvShipping"
        app:layout_constraintTop_toBottomOf="@+id/tvShipping" />

    <TextView
        android:id="@+id/tvSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Seller"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvFees"
        app:layout_constraintTop_toBottomOf="@+id/tvFees" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_buy"
        android:textAllCaps="false"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeller" />

</androidx.constraintlayout.widget.ConstraintLayout>