<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="3"
        android:text="@string/textView_product_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toEndOf="@+id/ivProduct"
        app:layout_constraintTop_toTopOf="@+id/ivProduct" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvProductName"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_discount"
        android:textColor="@color/text_discount"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toTopOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvFees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView_fees"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Seller"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tvFees"
        app:layout_constraintTop_toBottomOf="@+id/tvFees" />


    <ImageView
        android:id="@+id/ivStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvSeller"
        app:layout_constraintTop_toBottomOf="@+id/tvSeller"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart1"
        app:layout_constraintStart_toEndOf="@+id/ivStart1"
        app:layout_constraintTop_toTopOf="@+id/ivStart1"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart2"
        app:layout_constraintStart_toEndOf="@+id/ivStart2"
        app:layout_constraintTop_toTopOf="@+id/ivStart2"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/ivStart4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart3"
        app:layout_constraintStart_toEndOf="@+id/ivStart3"
        app:layout_constraintTop_toTopOf="@+id/ivStart3"
        app:srcCompat="@drawable/ic_baseline_star_half_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivStart4"
        app:layout_constraintStart_toEndOf="@+id/ivStart4"
        app:layout_constraintTop_toTopOf="@+id/ivStart4"
        app:srcCompat="@drawable/ic_baseline_star_gray_24" />

    <TextView
        android:id="@+id/tvCounterRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/textView_counter_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvProductName"
        app:layout_constraintTop_toTopOf="@+id/tvProductName"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>