<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".mvvmmecadolibre.view.activitys.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchProduct"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_white_round"
            android:elevation="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageMenu"
            app:layout_constraintEnd_toStartOf="@+id/imageShoppingCart"
            app:layout_constraintStart_toEndOf="@+id/imageMenu"
            app:layout_constraintTop_toTopOf="@+id/imageMenu"
            app:layout_constraintVertical_bias="0.0"
            app:queryHint="Buscar en Mercado Libre" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <ImageView
            android:id="@+id/imageShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/searchProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchProduct"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="@+id/imageMenu"
            app:layout_constraintStart_toStartOf="@+id/imageMenu"
            app:layout_constraintTop_toBottomOf="@+id/imageMenu"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/textUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
            app:layout_constraintStart_toEndOf="@+id/imageLocation"
            app:layout_constraintTop_toTopOf="@+id/imageLocation"
            android:text="@string/user_info" />

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textUserInfo"
            app:layout_constraintStart_toEndOf="@+id/textUserInfo"
            app:layout_constraintTop_toTopOf="@+id/textUserInfo"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/rvProductsResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/ivSearchOff"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_search_off_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvTitleProductOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/not_found_title"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSearchOff" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tvBodyProductOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/not_found_body"
        android:textSize="6pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleProductOff" />

</androidx.constraintlayout.widget.ConstraintLayout>